add navigationbar and Wuttikorn.jpg

--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
 </head>
 
 <header>
-    Our CSTU Stories
-</header>
-
-
+   
 <!-- ลิ้งไปหน้าอื่น (b) -->
-<nav>
+<nav class="navbar">
+  <div class="navdiv">
+    <ul>
+        <li><a href="#" class="logo">Our CSTU Stories</a></li>
+        <li><a href="#" class="logo">About us</a></li>
+        <li><a href="OurFutureHilights.html" class="logo">Our Future</a></li>
+        <li><a href="OurJourneyHilights.html" class="logo">Our Journey</a></li>
+
+    </ul>
+  </div>
+
 
 </nav>
+</header>
 
 <main>
+
     <!-- ข้อมูลคนในกลุ่ม -->
     <div class="section1">
 
