added media video and icon added home.html  modified index and decorate index.html with css responsive

--- a/index.html
+++ b/index.html
@@ -8,101 +8,28 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 
-<header class="header">
-   
-<!-- ลิ้งไปหน้าอื่น (b) -->
-<nav>
-  <div class="navbar">
-    <div class="logo"><a href="index.html">Our CSTU Stories</a></div>
-    <ul>
-        <a href="index.html">Home</a>
-        <a href="#" >About us</a>
-        <a href="OurFutureHilights.html">Our Future</a>
-        <a href="OurJourneyHilights.html">Our Journey</a>
-    </ul>
- </div>
-</nav>
-</header>
+<body>
+    <header>
+        <!-- ลิ้งไปหน้าอื่น (b) -->
+        <div class="logo">
+            <a href="index.html">
+                <img src="/G25_OurCSTUStories/resources/man-head.png">
+            </a>
+        </div>
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="OurFutureHilights.html">Our Future</a></li>
+            <li><a href="OurJourneyHilights.html">Our Journey</a></li>
+        </ul>
+    </header>
 
-<main>
+    <section class="box">
+        <video src="/G25_OurCSTUStories/resources/video1.mp4" autoplay muted loop></video>
+        <h1>Computer Science</h1>
+        <h3>Seek your light</h3>
+        <a href="home.html" class="boxBtn">Let's GO</a>
+    </section>
+</body>
 
-    <!-- ข้อมูลคนในกลุ่ม -->
-    <div class="section1">
-       <h1>คณะผู้จัดทำ</h1>
-    </div>
-<div class="data">
-<div class="purinat">
-    <img id="puripng" src="resources/Purinat.jpg" height="450px" width="300" >
-     <p class="pooh">
-          นาย ภูริณัฐ วรรธนะธัญญา
-            <br>
-            เลขประจำตัว:6709650565  
-        </p>
-</div>
-<div class="wuttikorn">
-        <img id="wuttipng" src="resources/Wuttikorn.jpg" height="450px" width="350">
-   
-        <p class="kan">
-          นาย วุฒิกร บุญทวี
-            <br>
-            เลขประจำตัว:6709650623  
-        </p>
-    </div>
-    <div class="supavit">
-        <img id="supapng" src="resources/" height="450px" width="300">
-   
-        <p class="atom">
-          นาย ศุภวิชญ์ ไม้จัตุรัส
-            <br>
-            เลขประจำตัว:6709650656  
-        </p>
-    </div>
-    <div class="noppamonthon">
-        <img id="noppapng" src="resources/" height="450px" width="300">
-   
-        <p class="gene">
-          นาย นภมณฑล ธนานุรักษ์
-            <br>
-            เลขประจำตัว:6709650417
-        </p>
-    </div>
-    <div class="sirimongkol">
-        <img id="siripng" src="resources/" height="450px" width="300">
-   
-        <p class="tae">
-          นาย ศิริมงคล ดอนศรีโคตร
-            <br>
-            เลขประจำตัว:6709650631 
-        </p>
-    </div>
-    <div class="burapa">
-        <img id="burapng" src="resources/" height="450px" width="300">
-   
-        <p class="ter">
-          นาย บูรพา จินดาเลิศ
-            <br>
-            เลขประจำตัว:6709650441 
-        </p>
-    </div>
-       
-
-    
-</div>
-
-    <!-- form -->
-    <div class="section2">
-        <article>
-            <p></p>
-        </article>
-    </div>
-</main>
-
-
-
-
-<footer>
-copr
-</footer>
-
-<script src="script.js"></script>
 </html>
