Update nav part in OurFutureHilights

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -7,21 +7,20 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    <header class="header">
-   
+    <header>
         <!-- ลิ้งไปหน้าอื่น (b) -->
-        <nav>
-          <div class="navbar">
-            <div class="logo"><a href="index.html">Our CSTU Stories</a></div>
-            <ul>
-                <a href="index.html">Home</a>
-                <a href="#" >About us</a>
-                <a href="OurFutureHilights.html">Our Future</a>
-                <a href="OurJourneyHilights.html">Our Journey</a>
-            </ul>
-         </div>
-        </nav>
-        </header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="/G25_OurCSTUStories/resources/man-head.png">
+            </a>
+        </div>
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="OurFutureHilights.html">Our Future</a></li>
+            <li><a href="OurJourneyHilights.html">Our Journey</a></li>
+        </ul>
+    </header>
 
         <!-- ข้อมูลภาพรวมอนาคตของแต่ละคน -->
         <main>
