Added OurFuture css tags and background image

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -6,7 +6,7 @@
     <title>Our Journey</title>
     <link rel="stylesheet" href="mystyle.css">
 </head>
-<body>
+<body class="OFH">
     <header>
         <!-- ลิ้งไปหน้าอื่น (b) -->
         <div class="logo">
@@ -85,7 +85,6 @@
                     <p>""</p>
                 </div>
             </div>
-
         </main>
 
     
