Adjusted containers size, added speech bubbles and make it responsive to any devices.

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -29,8 +29,8 @@
             <!--ส่วนข้อมูลภู-->
 
             <div class="container left" id="first">
-                <div class="textbox">
-                    <img id="puripng" src="resources/Purinat.jpg" lef height="300px" width="200" >
+                <img id="puripng" src="resources/Purinat.jpg" lef height="300px" width="200" >
+                <div class="textbox L">
                     <h1>'Pooh'</h1>
                     <p>""</p>
                 </div>
@@ -39,8 +39,8 @@
             <!--ส่วนข้อมูลกานต์-->
 
             <div class="container right" id="second">
-                <div class="textbox">
-                    <img id="wuttipng" src="resources/Wuttikorn.jpg" height="300px" width="200" >
+                <img id="wuttipng" src="resources/Wuttikorn.jpg" height="300px" width="200" >
+                <div class="textbox R">
                     <h1>'Kan'</h1>
                     <p>""</p>
                 </div>
@@ -49,8 +49,8 @@
             <!--ส่วนข้อมูลอะตอม-->
 
             <div class="container left" id="third">
-                <div class="textbox">
-                    <img id="supapng" src="resources/" height="300px" width="200" >
+                <img id="supapng" src="resources/" height="300px" width="200" >
+                <div class="textbox L">
                     <h1>'Atom'</h1>
                     <p>""</p>
                 </div>
@@ -59,8 +59,8 @@
             <!--ส่วนข้อมูลยีน-->
 
             <div class="container right" id="forth">
-                <div class="textbox">
-                    <img id="noppapng" src="resources/" height="300px" width="200" >
+                <img id="noppapng" src="resources/" height="300px" width="200" >
+                <div class="textbox R">
                     <h1>'Gene'</h1>
                     <p>""</p>
                 </div>
@@ -69,8 +69,8 @@
             <!--ส่วนข้อมูลเต้-->
 
             <div class="container left" id="fifth">
-                <div class="textbox">
-                    <img id="siripng" src="resources/" height="300px" width="200" >
+                <img id="siripng" src="resources/" height="300px" width="200" >
+                <div class="textbox L">
                     <h1>'Tae'</h1>
                     <p>""</p>
                 </div>
@@ -79,8 +79,8 @@
             <!--ส่วนข้อมูลเต้อ-->
 
             <div class="container right" id="sixth">
-                <div class="textbox">
-                    <img id="burapng" src="resources/" height="300px" width="200" >
+                <img id="burapng" src="resources/" height="300px" width="200" >
+                <div class="textbox R">
                     <h1>'Ter'</h1>
                     <p>""</p>
                 </div>
