--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -69,7 +69,7 @@
             <!--ส่วนข้อมูลเต้-->
 
             <div class="container left" id="fifth">
-                <img id="siripng" src="resources/" height="300px" width="200" >
+                <img id="siripng" src="resources/Sirimongkol.jpg" height="300px" width="200" >
                 <div class="textbox L">
                     <h1>'Tae'</h1>
                     <p>""</p>
