--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
                 </p>
             </div>
             <div class="sirimongkol">
-                <img id="siripng" src="resources/" height="450px" width="300">
+                <img id="siripng" src="resources/Sirimongkol.jpg" height="450px" width="300">
 
                 <p class="tae">
                     นาย ศิริมงคล ดอนศรีโคตร
