--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -42,7 +42,10 @@
                 <img id="wuttipng" src="resources/Wuttikorn.jpg" height="300px" width="200" >
                 <div class="textbox R">
                     <h1>'Kan'</h1>
-                    <p>""</p>
+                    <p>"ในโลกที่เทคโนโลยีก้าวหน้าอย่างรวดเร็ว การเรียนรู้และพัฒนาตัวเองในสาขาวิทยาการคอมพิวเตอร์ (Computer Science) 
+                        เป็นสิ่งสำคัญสำหรับการเติบโตในอาชีพและการสร้างนวัตกรรมใหม่ ๆ สำหรับอนาคตของผม ผมจึงเลือกเรียนในสาขานี้เพื่อให้ผมมีทักษะที่สำคัญในการทำงานอย่างการเขียนโค้ดและการเรียนเกี่ยวกับระบบปฏิบัติการของคอมพิวเตอร์
+                    ผมเลืกในสาขานี้เพราะ ผมมองเห็นว่าอณาคตของเราเต็่มไปด้วย technology ซึ่งจำเป็นต่อโลกในอณาคต
+                       เพื่อหน้าที่ การงานและการเงินในอณาคตของผม"</p>
                 </div>
             </div>
 
