--- a/home.html
+++ b/home.html
@@ -89,7 +89,54 @@
         <!-- form -->
         <div class="section2">
             <article>
-                <p></p>
+                <div class="form-container">
+                    <h1>Guest Books</h1>
+                    <form id="form">
+                        <!-- Firstname and Lastname Field -->
+                        <div class="form-group">
+                            <label for="fullname">ชื่อ-นามสกุล</label>
+                            <input type="text" id="fullname" name="fullname" />
+                            <span id="fullnameError" class="error"></span>
+                        </div>
+                        <!-- Gender -->
+                        <div class="form-group">
+                            <label for="gender">เพศ</label>
+                            <div class="radio-group">
+                                <label><input type="radio" name="gender" value="male"> ชาย</label>
+                                <label><input type="radio" name="gender" value="female"> หญิง</label>
+                                <label><input type="radio" name="gender" value="other"> อื่น ๆ</label>
+                                <label><input type="radio" name="gender" value="not_specified"> ไม่ประสงค์บอก</label>
+                            </div>
+                        </div>
+                        <!-- Email -->
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" />
+                            <span id="emailError" class="error"></span>
+                        </div>
+                        <!--Satisfaction-->
+                        <div class="form-group">
+                            <label for="satisfaction">ความพึงพอใจต่อเว็บไซต์</label>
+                            <select name="satisfaction" id="satisfaction">
+                                <option value="" disabled selected>Select an option</option>
+                                <option value="Excellence ">ดีเยี่ยม</option>
+                                <option value="Good">ดีมาก </option>
+                                <option value="Fair">พอใช้ </option>
+                                <option value="Improvement">ปรับปรุง </option>
+                                <option value="Poor">ไม่พอใจ</option>
+                            </select>   
+                        </div>
+                        <!-- Description -->
+                        <div class="form-group">
+                            <label for="description">ข้อเสนอแนะ / ความคิดเห็น </label>
+                            <textarea id="description" name="description" rows="4"></textarea>
+                        </div>
+                        <!-- Submit Button -->
+                        <div class="form-group">
+                            <input type="submit" value="Submit" />
+                        </div>
+                    </form>
+                </div>
             </article>
         </div>
     </main>
