Added members' future plans

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -32,7 +32,9 @@
                 <img id="puripng" src="resources/Purinat.jpg" lef height="300px" width="200" >
                 <div class="textbox L">
                     <h1>'Pooh'</h1>
-                    <p>""</p>
+                    <p>"ผมอยากเป็น Software Engineer
+                        เนื่องจากในช่วงไม่กี่ปีที่ผ่านมา หุ่นยนต์เข้ามามีบทบาทในชีวิตประจำวันของผู้คนมากขึ้น
+                        ซึ่งมันทำให้ผมสนใจในเรื่อง AI ว่าจะพัฒนามันขึ้นมาอย่างไร และมันมีกระบวนการทำงานอย่างไร"</p>
                 </div>
             </div>
 
@@ -43,9 +45,10 @@
                 <div class="textbox R">
                     <h1>'Kan'</h1>
                     <p>"ในโลกที่เทคโนโลยีก้าวหน้าอย่างรวดเร็ว การเรียนรู้และพัฒนาตัวเองในสาขาวิทยาการคอมพิวเตอร์ (Computer Science) 
-                        เป็นสิ่งสำคัญสำหรับการเติบโตในอาชีพและการสร้างนวัตกรรมใหม่ ๆ สำหรับอนาคตของผม ผมจึงเลือกเรียนในสาขานี้เพื่อให้ผมมีทักษะที่สำคัญในการทำงานอย่างการเขียนโค้ดและการเรียนเกี่ยวกับระบบปฏิบัติการของคอมพิวเตอร์
-                    ผมเลืกในสาขานี้เพราะ ผมมองเห็นว่าอณาคตของเราเต็่มไปด้วย technology ซึ่งจำเป็นต่อโลกในอณาคต
-                       เพื่อหน้าที่ การงานและการเงินในอณาคตของผม"</p>
+                        เป็นสิ่งสำคัญสำหรับการเติบโตในอาชีพและการสร้างนวัตกรรมใหม่ ๆ สำหรับอนาคตของผม ผมจึงเลือกเรียนในสาขานี้เพื่อให้
+                        ผมมีทักษะที่สำคัญในการทำงานอย่างการเขียนโค้ดและการเรียนเกี่ยวกับระบบปฏิบัติการของคอมพิวเตอร์
+                        ผมเลือกในสาขานี้เพราะ ผมมองเห็นว่าอณาคตของเราเต็่มไปด้วย technology ซึ่งจำเป็นต่อโลกในอนาคต
+                       เพื่อหน้าที่การงานและการเงินในอนาคตของผมเอง"</p>
                 </div>
             </div>
 
@@ -65,7 +68,9 @@
                 <img id="noppapng" src="resources/" height="300px" width="200" >
                 <div class="textbox R">
                     <h1>'Gene'</h1>
-                    <p>""</p>
+                    <p>"ผมไม่ค่อยชอบการเป็นพนักงานเงินเดือนเท่าไหร่ อาจจะหาเงินในตลาดหลักทรัพย์แทน แต่เหนือสิ่งอื่นใด ผมฝันอยากจะมีธุรกิจเป็นของตนเอง 
+                        ด้วยความที่ผมชอบอาหาร ผมอาจตัดสินใจทำธุรกิจเกี่ยวกับอาหาร หรือไม่ก็เปิดร้านอาหารเป็นของตัวเอง ซึ่งเป็นความฝันในวัยเด็กของผม หากเปิดร้านอาหาร 
+                        ผมอยากจะขยายสาขาไปทั่วประเทศและทำให้ทุกคนรู้จักและแพร่หลาย นั่นเป็นส่วนหนึ่งในความสำเร็จที่ผมจะทำเลย"</p>
                 </div>
             </div>
 
@@ -75,7 +80,7 @@
                 <img id="siripng" src="resources/Sirimongkol.jpg" height="300px" width="200" >
                 <div class="textbox L">
                     <h1>'Tae'</h1>
-                    <p>""</p>
+                    <p>"ผมอยากเป็นนักสร้างเกม อยากสร้างสรรค์โลกในฝันที่เราเติมสีสันลงไปเองได้ สร้างโลกที่เราอยากอยู่ ตัวละครที่เราชื่นชอบ และเรื่องราวที่เราอยากเล่าออกมาได้อย่างอิสระ"</p>
                 </div>
             </div>
 
