--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -65,7 +65,7 @@
             <!--ส่วนข้อมูลยีน-->
 
             <div class="container right" id="forth">
-                <img id="noppapng" src="resources/" height="300px" width="200" >
+                <img id="noppapng" src="resources/nopphamonthon.jpg" height="300px" width="200" >
                 <div class="textbox R">
                     <h1>'Gene'</h1>
                     <p>"ผมไม่ค่อยชอบการเป็นพนักงานเงินเดือนเท่าไหร่ อาจจะหาเงินในตลาดหลักทรัพย์แทน แต่เหนือสิ่งอื่นใด ผมฝันอยากจะมีธุรกิจเป็นของตนเอง 
