--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
                 </p>
             </div>
             <div class="noppamonthon">
-                <img id="noppapng" src="resources/" height="450px" width="300">
+                <img id="noppapng" src="resources/nopphamonthon.jpg" height="450px" width="300">
 
                 <p class="gene">
                     นาย นภมณฑล ธนานุรักษ์
