--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -55,10 +55,11 @@
             <!--ส่วนข้อมูลอะตอม-->
 
             <div class="container left" id="third">
-                <img id="supapng" src="resources/" height="300px" width="200" >
+                <img id="supapng" src="resources/Supavit.png" height="300px" width="200" >
                 <div class="textbox L">
                     <h1>'Atom'</h1>
-                    <p>""</p>
+                    <p>"ในอานคตที่เปิดกว้างด้านเทคโนโลยี ฉันอาจกลายเป็นนักพัฒนาซอฟต์แวร์ สร้างแอปหรือระบบที่ช่วยแก้ปัญหาในชีวิตประจำวัน
+                        หรือก้าวเข้าสู่วงการปัญญาประดิษฐ์และการวิเคราะห์ข้อมูลเพื่อพัฒนาเทคโนโลยีใหม่ๆ"</p>
                 </div>
             </div>
 
