--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
                 </p>
             </div>
             <div class="supavit">
-                <img id="supapng" src="resources/" height="450px" width="300">
+                <img id="supapng" src="resources/Supavit.png" height="450px" width="350">
 
                 <p class="atom">
                     นาย ศุภวิชญ์ ไม้จัตุรัส
