edit footer and decorate in css

--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
         <!-- ลิ้งไปหน้าอื่น (b) -->
         <div class="logo">
             <a href="index.html">
-                <img src="/G25_OurCSTUStories/resources/man-head.png">
+                <img src="resources/man-head.png">
             </a>
         </div>
         <ul class="nav">
             <li><a href="home.html">Home</a></li>
-            <li><a href="#">About us</a></li>
             <li><a href="OurFutureHilights.html">Our Future</a></li>
             <li><a href="OurJourneyHilights.html">Our Journey</a></li>
         </ul>
     </header>
 
     <section class="box">
-        <video src="/G25_OurCSTUStories/resources/video1.mp4" autoplay muted loop></video>
+        <video src="resources/video1.mp4" autoplay muted loop></video>
         <h1>Computer Science</h1>
         <h3>Seek your light</h3>
         <a href="home.html" class="boxBtn">Let's GO</a>
