--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -11,12 +11,11 @@
         <!-- ลิ้งไปหน้าอื่น (b) -->
         <div class="logo">
             <a href="index.html">
-                <img src="/G25_OurCSTUStories/resources/man-head.png">
+                <img src="resources/man-head.png">
             </a>
         </div>
         <ul class="nav">
             <li><a href="home.html">Home</a></li>
-            <li><a href="#">About us</a></li>
             <li><a href="OurFutureHilights.html">Our Future</a></li>
             <li><a href="OurJourneyHilights.html">Our Journey</a></li>
         </ul>
