add swiper css and js for index slide

--- a/home.html
+++ b/home.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💾Our CSTU Stories</title>
-    <link rel="stylesheet" href="mystyle.css"> 
+    <link rel="stylesheet" href="mystyle.css">
+     <!--boxicon css  -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- swiper css -->
+     <link rel="stylesheet" href="swiper.css">
 </head>
 
 <body class ="OFH">
@@ -229,5 +232,8 @@
      </div>
 </footer>
 
+<!-- Swiper Js -->
+ <script src="swiper.js"></script>
+<!-- Java Script -->
 <script src="script.js"></script>
 </html>
