Added scrolltotop in OurFutureHilights

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -91,10 +91,18 @@
                     <p>""</p>
                 </div>
             </div>
-        </main>
+        </main> 
 
-    
+        <a href="#">
+        <div onclick="scrolltotop()" class="uparrow">
+            <img src="resources/uparrow.png">
+            <p>Top</p>
+        </div>
+    </a>
+
+
 </body>
+
 
 <footer>
     <div class="footer-content">
