Added scrolltotop in home.html

--- a/home.html
+++ b/home.html
@@ -211,6 +211,14 @@
             </article>
         </div>
     </main>
+
+    <a href="#">
+        <div onclick="scrolltotop()" class="uparrow">
+            <img src="resources/uparrow.png">
+            <p>Top</p>
+        </div>
+    </a>
+
 </body>
 
 
