Added scrolltotop in OurJourneyHilights

--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -79,6 +79,14 @@
             </div>
         </div>
     </main>
+
+    <a href="#">
+        <div onclick="scrolltotop()" class="uparrow">
+            <img src="resources/uparrow.png">
+            <p>Top</p>
+        </div>
+    </a>
+
 </body>
 <script src="script.js"></script>
 </html>
