edit footer and adjust for responsive add in journey and future

--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -88,5 +88,29 @@
     </a>
 
 </body>
+
+<footer>
+    <div class="footer-content">
+        <img src="resources/man-head.png" alt="logo">
+        <h3>&copy; 2024 G25_CSTU</h3>
+        <p>Every Accomplishment Starts With The Decision To Try.</p>
+    </div>
+    <div class="footer-content">
+        <h4>About Us</h4>
+        <p>พวกเราคือนักศึกษา ภาควิชาวิทยการคอมพิวเตอร์ มหาวิทยาลัยธรรมศาตร์</p>
+    </div>
+
+    <div class="footer-content">
+        <h4>Contact</h4>
+        <i class='bx bx-envelope'></i>
+        <a href="mailto:purinat.wan@dome.tu.ac.th">Pooh</a>
+        <a href="mailto:wuthikorn.boo@dome.tu.ac.th">Karn</a>
+        <a href="mailto:supavit.mai@dome.tu.ac.th">Atom</a>
+        <a href="mailto:nopphamonthon.tha@dome.tu.ac.th">Gene</a>
+        <a href="mailto:sirimongkol.dor@dome.tu.ac.th">Tae</a>
+        <a href="mailto:burapa.jind@dome.tu.ac.th">Ter</a>
+    </div>
+</footer>
+
 <script src="script.js"></script>
 </html>
