Added ter's future plan in OurFutureHilights

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -88,7 +88,9 @@
                 <img id="burapng" src="resources/" height="300px" width="200" >
                 <div class="textbox R">
                     <h1>'Ter'</h1>
-                    <p>""</p>
+                    <p>"ผมตื่นเต้นมากที่จะได้ก้าวเข้าสู่โลกของ AI ผมสนใจมาตลอดว่าเทคโนโลยีสามารถเลียนแบบสติปัญญาของมนุษย์ได้อย่างไร ผมสนใจเป็นพิเศษในสาขาเฉพาะของ AI 
+                        เช่น natural language processing, computer vision ผมหวังว่าจะได้มีส่วนร่วมในการพัฒนาระบบ AI ที่จะส่งผลกระทบเชิงบวก เช่น ปรับปรุงการดูแลสุขภาพ ปรับปรุงการศึกษา หรือแก้ปัญหาสิ่งแวดล้อม 
+                        มันเป็นสาขาที่เติบโตอย่างรวดเร็วและมีความเป็นไปได้ไม่สิ้นสุด และผมแทบรอไม่ไหวแล้วที่จะเห็นว่าอนาคตจะเป็นไปอย่างไร"</p>
                 </div>
             </div>
         </main> 
