--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Journey</title>
     <link rel="stylesheet" href="mystyle.css">
+    <link rel="icon" type="image/x-icon" href="resources/favicon.png">
 </head>
 <body class="OFH">
     <header>
         <!-- ลิ้งไปหน้าอื่น -->
         <div class="logo">
             <a href="index.html">
-                <img src="/resources/man-head.png">
+                <img src="resources/man-head.png">
             </a>
         </div>
         <ul class="nav">
