--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💾Our CSTU Stories</title>
     <link rel="stylesheet" href="mystyle.css">
+    <link rel="icon" type="image/x-icon" href="resources/favicon.png">
      <!--boxicon css  -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
