--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💾Our CSTU Stories</title>
     <link rel="stylesheet" href="mystyle.css">
+    <link rel="icon" type="image/x-icon" href="resources/favicon.png">
 </head>
 
 <body>
