edit footer and add Pooh data in journey

--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -27,10 +27,10 @@
 
         <!-- ส่วนข้อมูลภู -->
         <div class="container left" id="first">
-            <img id="puripng" src="resources/" height="300px" width="200">
+            <img id="puripng" src="resources/Purinat.jpg" height="300px" width="200">
             <div class="textbox L">
-                <h1></h1>
-                <p></p>
+                <h1>Pooh</h1>
+                <p>เรียนรู้การพัฒนาซอฟต์แวร์ อัลกอริทึม การจัดการข้อมูล ระบบปฏิบัติการ AI การเงิน หาความรู้ด้านการลงทุนในหุ้นอเมริกา และหลักทรัพย์อื่นๆเช่น ตราสารหนี้ พันธบัตร และฝึกฝนเล่นดนตรี</p>
             </div>
         </div>
 
