--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
         <h4>Contact</h4>
         <i class='bx bx-envelope'></i>
         <a href="mailto:purinat.wan@dome.tu.ac.th">Pooh</a>
-        <a href="mailto:wuthikorn.boo@dome.tu.ac.th">Karn</a>
+        <a href="mailto:wuthikorn.boo@dome.tu.ac.th">Kan</a>
         <a href="mailto:supavit.mai@dome.tu.ac.th">Atom</a>
         <a href="mailto:nopphamonthon.tha@dome.tu.ac.th">Gene</a>
         <a href="mailto:sirimongkol.dor@dome.tu.ac.th">Tae</a>
