--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -64,10 +64,10 @@
 
         <!-- ส่วนข้อมูลเต้ -->
         <div class="container left" id="fifth">
-            <img id="siripng" src="resources/" height="300px" width="200">
+            <img id="siripng" src="resources/Sirimongkol.jpg" height="300px" width="200">
             <div class="textbox L">
-                <h1></h1>
-                <p></p>
+                <h1>Tae</h1>
+                <p>เรียนรู้ภาษาโปรแกรม โปรแกรมสร้างเกม และหลักการออกแบบเกมเบื้องต้น ลองสร้างเกมง่ายๆ เพื่อทดลองและพัฒนาทักษะ พูดคุยแลกเปลี่ยนกับนักพัฒนาเกมคนอื่นๆ เพื่อเรียนรู้และได้รับแรงบันดาลใจ </p>
             </div>
         </div>
 
