Added gene's journey in OurJourneyHilights

--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -55,10 +55,10 @@
 
         <!-- ส่วนข้อมูลยีน -->
         <div class="container right" id="forth">
-            <img id="noppapng" src="resources/" height="300px" width="200">
+            <img id="noppapng" src="resources/nopphamonthon.jpg" height="300px" width="200">
             <div class="textbox R">
-                <h1></h1>
-                <p></p>
+                <h1>Gene</h1>
+                <p>เรียนการเขียนโปรแกรม ลองทำอะไรใหม่ๆ ท้าทายความสามารถ เก็บเงิน ลองลงทุนในตลาดหลักทรัพย์ ต่อยอดธุรกิจ ทำ startup </p>
             </div>
         </div>
 
