edit header navbar for responsive and add toggle btn js for everypage

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" type="image/x-icon" href="resources/favicon.png">
 </head>
+
 <body class="OFH">
     <header>
         <!-- ลิ้งไปหน้าอื่น (b) -->
         <div class="logo">
             <a href="index.html">
-                <img src="resources/man-head.png">
+                <img src="resources/man-head.png" alt="Logo">
             </a>
         </div>
         <ul class="nav">
@@ -20,89 +22,111 @@
             <li><a href="OurFutureHilights.html">Our Future</a></li>
             <li><a href="OurJourneyHilights.html">Our Journey</a></li>
         </ul>
+        <div class="toggle_btn">
+            <i class='bx bx-menu'></i>
+        </div>
+
+        <ul class="dropdown_menu">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="OurFutureHilights.html">Our Future</a></li>
+            <li><a href="OurJourneyHilights.html">Our Journey</a></li>
+        </ul>
     </header>
 
-        <!-- ข้อมูลภาพรวมอนาคตของแต่ละคน -->
-        <main>
-            <h1 class="idiom">"DIFFERENT MEN, DIFFERENT MINDS"</h1>
+    <!-- ข้อมูลภาพรวมอนาคตของแต่ละคน -->
+    <main>
+        <h1 class="idiom">"DIFFERENT MEN, DIFFERENT MINDS"</h1>
 
-            <!--ส่วนข้อมูลภู-->
+        <!--ส่วนข้อมูลภู-->
 
-            <div class="container left" id="first">
-                <img id="puripng" src="resources/Purinat.jpg" lef height="300px" width="200" >
-                <div class="textbox L">
-                    <h1>'Pooh'</h1>
-                    <p>"ผมอยากเป็น Software Engineer
-                        เนื่องจากในช่วงไม่กี่ปีที่ผ่านมา หุ่นยนต์เข้ามามีบทบาทในชีวิตประจำวันของผู้คนมากขึ้น
-                        ซึ่งมันทำให้ผมสนใจในเรื่อง AI ว่าจะพัฒนามันขึ้นมาอย่างไร และมันมีกระบวนการทำงานอย่างไร"</p>
-                </div>
+        <div class="container left" id="first">
+            <img id="puripng" src="resources/Purinat.jpg" lef height="300px" width="200">
+            <div class="textbox L">
+                <h1>'Pooh'</h1>
+                <p>"ผมอยากเป็น Software Engineer
+                    เนื่องจากในช่วงไม่กี่ปีที่ผ่านมา หุ่นยนต์เข้ามามีบทบาทในชีวิตประจำวันของผู้คนมากขึ้น
+                    ซึ่งมันทำให้ผมสนใจในเรื่อง AI ว่าจะพัฒนามันขึ้นมาอย่างไร และมันมีกระบวนการทำงานอย่างไร"</p>
             </div>
+        </div>
 
-            <!--ส่วนข้อมูลกานต์-->
+        <!--ส่วนข้อมูลกานต์-->
 
-            <div class="container right" id="second">
-                <img id="wuttipng" src="resources/Wuttikorn.jpg" height="300px" width="200" >
-                <div class="textbox R">
-                    <h1>'Kan'</h1>
-                    <p>"ในโลกที่เทคโนโลยีก้าวหน้าอย่างรวดเร็ว การเรียนรู้และพัฒนาตัวเองเป็นสิ่งสำคัญสำหรับการเติบโตในอาชีพและการสร้างนวัตกรรมใหม่ ๆ สำหรับอนาคตของและ
-                         ผมมองเห็นว่าอณาคตของเราเต็่มไปด้วย technology ซึ่งจำเป็นต่อโลกในอนาคต
-                       เพื่อหน้าที่การงานและการเงินในอนาคต"</p>
-                </div>
+        <div class="container right" id="second">
+            <img id="wuttipng" src="resources/Wuttikorn.jpg" height="300px" width="200">
+            <div class="textbox R">
+                <h1>'Kan'</h1>
+                <p>"ในโลกที่เทคโนโลยีก้าวหน้าอย่างรวดเร็ว
+                    การเรียนรู้และพัฒนาตัวเองเป็นสิ่งสำคัญสำหรับการเติบโตในอาชีพและการสร้างนวัตกรรมใหม่ ๆ
+                    สำหรับอนาคตของและ
+                    ผมมองเห็นว่าอณาคตของเราเต็่มไปด้วย technology ซึ่งจำเป็นต่อโลกในอนาคต
+                    เพื่อหน้าที่การงานและการเงินในอนาคต"</p>
             </div>
+        </div>
 
-            <!--ส่วนข้อมูลอะตอม-->
+        <!--ส่วนข้อมูลอะตอม-->
 
-            <div class="container left" id="third">
-                <img id="supapng" src="resources/Supavit.png" height="300px" width="200" >
-                <div class="textbox L">
-                    <h1>'Atom'</h1>
-                    <p>"ในอานคตที่เปิดกว้างด้านเทคโนโลยี ฉันอาจกลายเป็นนักพัฒนาซอฟต์แวร์ สร้างแอปหรือระบบที่ช่วยแก้ปัญหาในชีวิตประจำวัน
-                        หรือก้าวเข้าสู่วงการปัญญาประดิษฐ์และการวิเคราะห์ข้อมูลเพื่อพัฒนาเทคโนโลยีใหม่ๆ"</p>
-                </div>
+        <div class="container left" id="third">
+            <img id="supapng" src="resources/Supavit.png" height="300px" width="200">
+            <div class="textbox L">
+                <h1>'Atom'</h1>
+                <p>"ในอานคตที่เปิดกว้างด้านเทคโนโลยี ฉันอาจกลายเป็นนักพัฒนาซอฟต์แวร์
+                    สร้างแอปหรือระบบที่ช่วยแก้ปัญหาในชีวิตประจำวัน
+                    หรือก้าวเข้าสู่วงการปัญญาประดิษฐ์และการวิเคราะห์ข้อมูลเพื่อพัฒนาเทคโนโลยีใหม่ๆ"</p>
             </div>
+        </div>
 
-            <!--ส่วนข้อมูลยีน-->
+        <!--ส่วนข้อมูลยีน-->
 
-            <div class="container right" id="forth">
-                <img id="noppapng" src="resources/nopphamonthon.jpg" height="300px" width="200" >
-                <div class="textbox R">
-                    <h1>'Gene'</h1>
-                    <p>"ผมไม่ค่อยชอบการเป็นพนักงานเงินเดือนเท่าไหร่ อาจจะหาเงินในตลาดหลักทรัพย์แทน แต่เหนือสิ่งอื่นใด ผมฝันอยากจะมีธุรกิจเป็นของตนเอง 
-                        ด้วยความที่ผมชอบอาหาร ผมอาจตัดสินใจทำธุรกิจเกี่ยวกับอาหาร หรือไม่ก็เปิดร้านอาหารเป็นของตัวเอง ซึ่งเป็นความฝันในวัยเด็กของผม หากเปิดร้านอาหาร 
-                        ผมอยากจะขยายสาขาไปทั่วประเทศและทำให้ทุกคนรู้จักและแพร่หลาย นั่นเป็นส่วนหนึ่งในความสำเร็จที่ผมจะทำเลย"</p>
-                </div>
+        <div class="container right" id="forth">
+            <img id="noppapng" src="resources/nopphamonthon.jpg" height="300px" width="200">
+            <div class="textbox R">
+                <h1>'Gene'</h1>
+                <p>"ผมไม่ค่อยชอบการเป็นพนักงานเงินเดือนเท่าไหร่ อาจจะหาเงินในตลาดหลักทรัพย์แทน แต่เหนือสิ่งอื่นใด
+                    ผมฝันอยากจะมีธุรกิจเป็นของตนเอง
+                    ด้วยความที่ผมชอบอาหาร ผมอาจตัดสินใจทำธุรกิจเกี่ยวกับอาหาร หรือไม่ก็เปิดร้านอาหารเป็นของตัวเอง
+                    ซึ่งเป็นความฝันในวัยเด็กของผม หากเปิดร้านอาหาร
+                    ผมอยากจะขยายสาขาไปทั่วประเทศและทำให้ทุกคนรู้จักและแพร่หลาย
+                    นั่นเป็นส่วนหนึ่งในความสำเร็จที่ผมจะทำเลย"</p>
             </div>
+        </div>
 
-            <!--ส่วนข้อมูลเต้-->
+        <!--ส่วนข้อมูลเต้-->
 
-            <div class="container left" id="fifth">
-                <img id="siripng" src="resources/Sirimongkol.jpg" height="300px" width="200" >
-                <div class="textbox L">
-                    <h1>'Tae'</h1>
-                    <p>"ผมอยากเป็นนักสร้างเกม อยากสร้างสรรค์โลกในฝันที่เราเติมสีสันลงไปเองได้ สร้างโลกที่เราอยากอยู่ ตัวละครที่เราชื่นชอบ และเรื่องราวที่เราอยากเล่าออกมาได้อย่างอิสระ"</p>
-                </div>
+        <div class="container left" id="fifth">
+            <img id="siripng" src="resources/Sirimongkol.jpg" height="300px" width="200">
+            <div class="textbox L">
+                <h1>'Tae'</h1>
+                <p>"ผมอยากเป็นนักสร้างเกม อยากสร้างสรรค์โลกในฝันที่เราเติมสีสันลงไปเองได้ สร้างโลกที่เราอยากอยู่
+                    ตัวละครที่เราชื่นชอบ และเรื่องราวที่เราอยากเล่าออกมาได้อย่างอิสระ"</p>
             </div>
+        </div>
 
-            <!--ส่วนข้อมูลเต้อ-->
+        <!--ส่วนข้อมูลเต้อ-->
 
-            <div class="container right" id="sixth">
-                <img id="burapng" src="resources/" height="300px" width="200" >
-                <div class="textbox R">
-                    <h1>'Ter'</h1>
-                    <p>"ผมตื่นเต้นมากที่จะได้ก้าวเข้าสู่โลกของ AI ผมสนใจมาตลอดว่าเทคโนโลยีสามารถเลียนแบบสติปัญญาของมนุษย์ได้อย่างไร ผมสนใจเป็นพิเศษในสาขาเฉพาะของ AI 
-                        เช่น natural language processing, computer vision ผมหวังว่าจะได้มีส่วนร่วมในการพัฒนาระบบ AI ที่จะส่งผลกระทบเชิงบวก เช่น ปรับปรุงการดูแลสุขภาพ ปรับปรุงการศึกษา หรือแก้ปัญหาสิ่งแวดล้อม 
-                        มันเป็นสาขาที่เติบโตอย่างรวดเร็วและมีความเป็นไปได้ไม่สิ้นสุด และผมแทบรอไม่ไหวแล้วที่จะเห็นว่าอนาคตจะเป็นไปอย่างไร"</p>
-                </div>
+        <div class="container right" id="sixth">
+            <img id="burapng" src="resources/" height="300px" width="200">
+            <div class="textbox R">
+                <h1>'Ter'</h1>
+                <p>"ผมตื่นเต้นมากที่จะได้ก้าวเข้าสู่โลกของ AI
+                    ผมสนใจมาตลอดว่าเทคโนโลยีสามารถเลียนแบบสติปัญญาของมนุษย์ได้อย่างไร ผมสนใจเป็นพิเศษในสาขาเฉพาะของ AI
+                    เช่น natural language processing, computer vision ผมหวังว่าจะได้มีส่วนร่วมในการพัฒนาระบบ AI
+                    ที่จะส่งผลกระทบเชิงบวก เช่น ปรับปรุงการดูแลสุขภาพ ปรับปรุงการศึกษา หรือแก้ปัญหาสิ่งแวดล้อม
+                    มันเป็นสาขาที่เติบโตอย่างรวดเร็วและมีความเป็นไปได้ไม่สิ้นสุด
+                    และผมแทบรอไม่ไหวแล้วที่จะเห็นว่าอนาคตจะเป็นไปอย่างไร"</p>
             </div>
-        </main> 
+        </div>
+    </main>
 
-        <a href="#">
+    <a href="#">
         <div onclick="scrolltotop()" class="uparrow">
             <img src="resources/uparrow.png">
             <p>Top</p>
         </div>
     </a>
 
+
+    <!-- toggle button Java Script -->
+    <script src="toggle_btn.js"></script>
 
 </body>
 
@@ -131,4 +155,5 @@
 </footer>
 
 <script src="script.js"></script>
+
 </html>
