--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,25 @@
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" type="image/x-icon" href="resources/favicon.png">
 </head>
+
 <body class="OFH">
     <header>
-        <!-- ลิ้งไปหน้าอื่น -->
+        <!-- ลิ้งไปหน้าอื่น (b) -->
         <div class="logo">
             <a href="index.html">
-                <img src="resources/man-head.png">
+                <img src="resources/man-head.png" alt="Logo">
             </a>
         </div>
         <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="OurFutureHilights.html">Our Future</a></li>
+            <li><a href="OurJourneyHilights.html">Our Journey</a></li>
+        </ul>
+        <div class="toggle_btn">
+            <i class='bx bx-menu'></i>
+        </div>
+
+        <ul class="dropdown_menu">
             <li><a href="home.html">Home</a></li>
             <li><a href="OurFutureHilights.html">Our Future</a></li>
             <li><a href="OurJourneyHilights.html">Our Journey</a></li>
@@ -31,7 +42,8 @@
             <img id="puripng" src="resources/Purinat.jpg" height="300px" width="200">
             <div class="textbox L">
                 <h1>Pooh</h1>
-                <p>เรียนรู้การพัฒนาซอฟต์แวร์ อัลกอริทึม การจัดการข้อมูล ระบบปฏิบัติการ AI การเงิน หาความรู้ด้านการลงทุนในหุ้นอเมริกา และหลักทรัพย์อื่นๆเช่น ตราสารหนี้ พันธบัตร และฝึกฝนเล่นดนตรี</p>
+                <p>เรียนรู้การพัฒนาซอฟต์แวร์ อัลกอริทึม การจัดการข้อมูล ระบบปฏิบัติการ AI การเงิน
+                    หาความรู้ด้านการลงทุนในหุ้นอเมริกา และหลักทรัพย์อื่นๆเช่น ตราสารหนี้ พันธบัตร และฝึกฝนเล่นดนตรี</p>
             </div>
         </div>
 
@@ -88,6 +100,9 @@
         </div>
     </a>
 
+    <!-- toggle button Java Script -->
+    <script src="toggle_btn.js"></script>
+
 </body>
 
 <footer>
@@ -114,4 +129,5 @@
 </footer>
 
 <script src="script.js"></script>
+
 </html>
