--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💾Our CSTU Stories</title>
+    <title>Home</title>
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" type="image/x-icon" href="resources/favicon.png">
      <!--boxicon css  -->
@@ -17,10 +17,19 @@
         <!-- ลิ้งไปหน้าอื่น (b) -->
         <div class="logo">
             <a href="index.html">
-                <img src="resources/man-head.png">
+                <img src="resources/man-head.png" alt="Logo">
             </a>
         </div>
         <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="OurFutureHilights.html">Our Future</a></li>
+            <li><a href="OurJourneyHilights.html">Our Journey</a></li>
+        </ul>
+        <div class="toggle_btn">
+            <i class='bx bx-menu'></i>
+        </div>
+
+        <ul class="dropdown_menu">
             <li><a href="home.html">Home</a></li>
             <li><a href="OurFutureHilights.html">Our Future</a></li>
             <li><a href="OurJourneyHilights.html">Our Journey</a></li>
@@ -127,6 +136,9 @@
             <p>Top</p>
         </div>
     </a>
+
+    <!-- toggle button Java Script -->
+    <script src="toggle_btn.js"></script>
 
 </body>
 
