--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💾Our CSTU Stories</title>
+    <title>Our CSTU Stories</title>
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" type="image/x-icon" href="resources/favicon.png">
+    <!--boxicon css-->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -14,10 +16,19 @@
         <!-- ลิ้งไปหน้าอื่น (b) -->
         <div class="logo">
             <a href="index.html">
-                <img src="resources/man-head.png">
+                <img src="resources/man-head.png" alt="Logo">
             </a>
         </div>
         <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="OurFutureHilights.html">Our Future</a></li>
+            <li><a href="OurJourneyHilights.html">Our Journey</a></li>
+        </ul>
+        <div class="toggle_btn">
+            <i class='bx bx-menu'></i>
+        </div>
+
+        <ul class="dropdown_menu">
             <li><a href="home.html">Home</a></li>
             <li><a href="OurFutureHilights.html">Our Future</a></li>
             <li><a href="OurJourneyHilights.html">Our Journey</a></li>
@@ -30,6 +41,9 @@
         <h3>Seek your light</h3>
         <a href="home.html" class="boxBtn">Let's GO</a>
     </section>
+
+    <!-- toggle button Java Script -->
+    <script src="toggle_btn.js"></script>
 </body>
 
 </html>
