add box css everypage

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -7,6 +7,8 @@
     <title>Our Journey</title>
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" type="image/x-icon" href="resources/favicon.png">
+    <!--boxicon css-->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body class="OFH">
@@ -69,7 +71,7 @@
             <img id="supapng" src="resources/Supavit.png" height="300px" width="200">
             <div class="textbox L">
                 <h1>'Atom'</h1>
-                <p>"ในอานคตที่เปิดกว้างด้านเทคโนโลยี ฉันอาจกลายเป็นนักพัฒนาซอฟต์แวร์
+                <p>"ในอนาคตที่เปิดกว้างด้านเทคโนโลยี ฉันอาจกลายเป็นนักพัฒนาซอฟต์แวร์
                     สร้างแอปหรือระบบที่ช่วยแก้ปัญหาในชีวิตประจำวัน
                     หรือก้าวเข้าสู่วงการปัญญาประดิษฐ์และการวิเคราะห์ข้อมูลเพื่อพัฒนาเทคโนโลยีใหม่ๆ"</p>
             </div>
