--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -7,6 +7,8 @@
     <title>Our Journey</title>
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" type="image/x-icon" href="resources/favicon.png">
+    <!--boxicon css-->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body class="OFH">
