add js backtotopvisible adjust back to top every html and change it to responsive

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -119,13 +119,10 @@
         </div>
     </main>
 
-    <a href="#">
-        <div onclick="scrolltotop()" class="uparrow">
-            <img src="resources/uparrow.png">
-            <p>Top</p>
-        </div>
-    </a>
-
+    <!-- button backtotop -->
+    <button id="back-to-top" class="backtotopbutton">
+        <p>Back To Top</p><img src="resources/uparrow.png">
+    </button>
 
     <!-- toggle button Java Script -->
     <script src="toggle_btn.js"></script>
