add backtotop js file

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -124,6 +124,9 @@
         <p>Back To Top</p><img src="resources/uparrow.png">
     </button>
 
+    <!-- backtotop Java Script -->
+    <script src="backtotop.js"></script>
+
     <!-- toggle button Java Script -->
     <script src="toggle_btn.js"></script>
 
